# lermo-ai

./: .gitignore  README.md
helm/base/app/: Chart.yaml
helm/base/app/templates/: deployment.yaml  service.yaml  serviceaccount.yaml
helm/overlay/lermo-ai-api/: kustomization.yaml  values.yaml
helm/overlay/lermo-ai-slide/: .env  kustomization.yaml  values.yaml
helm/overlay/lermo-ai-voice/: values.yaml
helm/overlay/redis/: kustomization.yaml
lermo-ai-services/lermo-ai-slide/: Dockerfile  README.md  main.py  pyproject.toml
lermo-ai-services/lermo-ai-slide/app/: db.py  engine.py  main.py
lermo-ai-services/lermo-ai-slide/app/api/: config.py  slide.py
lermo-ai-services/lermo-ai-slide/app/dataset/: model.py
lermo-ai-services/lermo-ai-slide/app/dataset/faiss_lermo_ai/: index.faiss  index.pkl
lermo-ai-services/lermo-ai-slide/app/dataset/faiss_lermo_ai_b/: index.faiss  index.pkl
lermo-ai-services/lermo-ai-slide/app/dataset/lermo_revealjs/: audio.md  code.md  image.md  markdown.md  text.md  video.md
lermo-ai-services/lermo-ai-slide/app/dataset/revealjs/reveal-dataset-b/: main.html
lermo-ai-services/lermo-ai-tts/: Dockerfile  README.md  requirements.txt
lermo-ai-services/lermo-ai-tts/app/: db.py  engine.py  main.py
lermo-ai-services/lermo-ai-tts/app/api/: voice.py
